protocols/tests/inverters/inverter_d0.out
error: Output 'DUT.s' depends on input(s) 'DUT.a' which do not have assigned values ('DUT.a' initialized to DontCare and were never assigned a concrete value)
  ┌─ inverters/inverter_d0.prot:7:12
  │
7 │   DUT.a := DUT.s;
  │            ^^^^^ Output 'DUT.s' depends on input(s) 'DUT.a' which do not have assigned values ('DUT.a' initialized to DontCare and were never assigned a concrete value)

Trace 0 failed: Evaluation(ForbiddenPortRead { port_name: "DUT.s", unassigned_inputs: [("DUT.a", None)], expr_id: expr1 })
Trace 0 execution failed.
